[package]
name = "planner3"
version = "0.1.0"
authors = ["Richard Fryer <richard@richardfryer.com>"]

[dependencies]
rocket = "0.2.4"
rocket_codegen = "0.2.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
regex = "0.2"
typed-arena = "1.2.0"
arena-tree = "0.3.0"
lazy_static = "0.2"
error-chain = "0.10.0"
chrono = "0.3"

[dependencies.rocket_contrib]
version = "0.2.4"
default-features = false
features = ["handlebars_templates"]